@@ -1,4 +1,3 @@
-// src/main/java/com/comparemydevice/backend/service/impl/CategoryServiceImpl.java
 package com.comparemydevice.backend.service.impl;
 
 import com.comparemydevice.backend.dto.CategoryDTO;
@@ -9,51 +8,100 @@ import com.comparemydevice.backend.service.CategoryService;
 import com.comparemydevice.backend.service.support.SlugService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Service @RequiredArgsConstructor
+@Service
+@RequiredArgsConstructor
 public class CategoryServiceImpl implements CategoryService {
+
     private final CategoryRepository repo;
     private final ModelMapper mapper;
     private final SlugService slugService = new SlugService();
 
-    @Override @Transactional
+    // ---------- CRUD ----------
+
+    @Override
+    @Transactional
     public CategoryDTO create(CategoryDTO dto) {
         Category c = mapper.map(dto, Category.class);
         c.setId(null);
-        if (c.getSlug() == null || c.getSlug().isBlank()) {
-            c.setSlug(slugService.ensureUnique(c.getName(), repo::existsBySlug));
-        } else {
-            c.setSlug(slugService.ensureUnique(c.getSlug(), repo::existsBySlug));
-        }
+
+        // Generate or normalize a unique slug
+        String baseSlug = (c.getSlug() == null || c.getSlug().isBlank()) ? c.getName() : c.getSlug();
+        c.setSlug(slugService.ensureUnique(baseSlug, repo::existsBySlug));
+
         return toDTO(repo.save(c));
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CategoryDTO get(Long id) { return toDTO(find(id)); }
 
-    @Override @Transactional
+    @Override
+    @Transactional
     public CategoryDTO update(Long id, CategoryDTO dto) {
         Category c = find(id);
-        c.setName(dto.getName());
-        c.setIconUrl(dto.getIconUrl());
-        if (dto.getSlug() != null && !dto.getSlug().isBlank() && !dto.getSlug().equals(c.getSlug())) {
-            c.setSlug(slugService.ensureUnique(dto.getSlug(), repo::existsBySlug));
+
+        if (dto.getName() != null)    c.setName(dto.getName());
+        if (dto.getIconUrl() != null) c.setIconUrl(dto.getIconUrl());
+
+        if (dto.getSlug() != null) {
+            String incoming = dto.getSlug().trim();
+            if (incoming.isEmpty()) {
+                // recompute from current name
+                c.setSlug(slugService.ensureUnique(c.getName(), repo::existsBySlug));
+            } else if (!incoming.equals(c.getSlug())) {
+                c.setSlug(slugService.ensureUnique(incoming, repo::existsBySlug));
+            }
+        } else if (c.getSlug() == null || c.getSlug().isBlank()) {
+            c.setSlug(slugService.ensureUnique(c.getName(), repo::existsBySlug));
         }
+
         return toDTO(repo.save(c));
     }
 
-    @Override @Transactional
+    @Override
+    @Transactional
     public void delete(Long id) { repo.delete(find(id)); }
 
+    // ---------- Lists ----------
+
     @Override
+    @Transactional(readOnly = true)
     public List<CategoryDTO> getAll() {
-        return repo.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+        return repo.findAllByOrderByNameAsc().stream().map(this::toDTO).toList();
     }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Page<CategoryDTO> list(Pageable pageable) {
+        return repo.findAll(pageable).map(this::toDTO);
+    }
+
+    // ---------- Lookups ----------
+
+    @Override
+    @Transactional(readOnly = true)
+    public CategoryDTO getBySlug(String slug) {
+        if (slug == null || slug.isBlank()) throw new IllegalArgumentException("slug must not be blank");
+        Category c = repo.findBySlug(slug.trim())
+                .orElseThrow(() -> new ResourceNotFoundException("Category not found by slug: " + slug));
+        return toDTO(c);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public boolean existsBySlug(String slug) {
+        if (slug == null || slug.isBlank()) return false;
+        return repo.existsBySlug(slug.trim());
+    }
+
+    // ---------- Helpers ----------
 
     private Category find(Long id) {
         return repo.findById(id).orElseThrow(() -> new ResourceNotFoundException("Category not found: " + id));
